src/log/build_2025-04-18_12-36-39/turtlebot3_rl/stderr.log
  File "/home/emma/turtlebot3_rl_ws/src/install/turtlebot3_rl/lib/python3.10/site-packages/turtlebot3_rl/train_test.py", line 16
    model.save(f"model_{datetime.now().strftime("%Y-%m-%d %H:%M:%S")}")
                                                 ^
SyntaxError: f-string: unmatched '('

